Sun Jan 13 21:20:16 2002  Tom Gilbert  <tom@linuxbrit.co.uk>

	* Fix for set_format dumbness.

Fri May  4 18:40:04 PDT 2001  Michael Jennings  <mej@eterm.org>

	* Fixed initial creation of the config header.
	
Sat Feb 17 03:04:36 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Added gib_strjoin, a util function.

Sun Nov 12 18:21:19 CST 2000 Lyle Kempler <term@twistedpath.org>

	* Added giblib.spec.

Fri Nov 10 01:48:55 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Tidy up and added string_split list function.

Thu Nov  9 00:34:45 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Created.
