@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(giblib/gib_list.c)
-AM_INIT_AUTOMAKE(giblib, 1.2.1, no-define)
+AM_INIT_AUTOMAKE(giblib, 1.2.2, no-define)
 AM_CONFIG_HEADER(giblib/giblib_config.h)
 
 AC_ISC_POSIX
